# clarion

./: .gitignore  Makefile  README.md  clarion.toml  pyproject.toml
android/: settings.gradle.kts
android/app/: build.gradle.kts
clarion/: app.py  config.py
clarion/brain/: db_tools.py  embeddings.py  manager.py  rebuild.py  tools.py
clarion/harness/: brain_maintenance.py  classifier.py  cross_domain.py  custom_tools.py  dashboards.py  dispatch.py  education.py  fast_paths.py  harness.py  output_utils.py  patterns.py  query_cache.py  query_pipeline.py  registry.py  reminders.py  scheduled_jobs.py  telemetry.py  tool_library.py  worker.py
clarion/prompts/: dispatch.md  note_processing.md  note_processing_bootstrap.md  note_processing_priming.md  query.md  retry_no_index.md  retry_no_tools.md
clarion/providers/: base.py  claude.py  mock.py  ollama.py  openai.py  router.py
clarion/server/: models.py  routes_brain.py  routes_clarifications.py  routes_dashboards.py  routes_notes.py  routes_query.py  routes_status.py
clarion/storage/: database.py  notes.py
clarion/views/: parser.py  types.py
docs/: NEXT.md  PLAN.md  STATUS.md  android-setup.md  model-experiments.md  vision.md
docs/decisions/: D1-server-language.md  D2-client-strategy.md  (+4 more)
tests/: benchmark_models.py  test_api.py  test_brain.py  test_brain_lifecycle.py  test_classifier.py  test_cloud_models.py  test_db_tools.py  test_dispatch.py  test_dispatch_paths.py  test_e2e_ollama.py  test_education.py  test_enforcement.py  test_harness.py  test_scale.py  test_storage.py  test_views.py
web/: index.html
(+35 files in other folders)
